@@ -1,6 +1,6 @@
 /*
  *
- *  Copyright 2015 the original author or authors.
+ *  Copyright 2015-2019 the original author or authors.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -18,22 +18,19 @@
  */
 package springfox.documentation.service;
 
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.base.Strings;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.Multimap;
-import com.google.common.collect.Ordering;
-
+import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.stream.StreamSupport;
 
-import static com.google.common.collect.FluentIterable.*;
-import static com.google.common.collect.Sets.*;
+import static java.util.Optional.*;
+import static java.util.stream.Collectors.*;
+import static org.springframework.util.StringUtils.*;
 import static springfox.documentation.builders.BuilderDefaults.*;
 
 public class Tags {
@@ -41,95 +38,47 @@ public class Tags {
     throw new UnsupportedOperationException();
   }
 
-  public static Set<Tag> toTags(Multimap<String, ApiListing> apiListings) {
-    Iterable<ApiListing> allListings = Iterables.concat(nullToEmptyMultimap(apiListings).asMap().values());
-    List<Tag> tags = from(allListings)
-        .transformAndConcat(collectTags())
-        .toList();
-    TreeSet<Tag> tagSet = newTreeSet(tagComparator());
+  public static Set<Tag> toTags(Map<String, List<ApiListing>> apiListings) {
+    Iterable<ApiListing> allListings = nullToEmptyMultimap(apiListings).values().stream()
+        .flatMap(Collection::stream)
+        .collect(toList());
+    List<Tag> tags =
+        StreamSupport.stream(allListings.spliterator(), false)
+            .map((Function<ApiListing,Iterable<Tag>>) ApiListing::getTags)
+            .flatMap(tagIterable -> StreamSupport.stream(tagIterable.spliterator(), false))
+            .collect(toList());
+    TreeSet<Tag> tagSet = new TreeSet<>(tagComparator());
     tagSet.addAll(tags);
     return tagSet;
   }
 
   public static Comparator<Tag> tagComparator() {
-    return Ordering.from(byOrder())
-        .compound(thenByName());
+    return byOrder()
+        .thenComparing(thenByName());
   }
 
   private static Comparator<Tag> thenByName() {
-    return new Comparator<Tag>() {
-      @Override
-      public int compare(Tag first, Tag second) {
-        return first.getName().compareTo(second.getName());
-      }
-    };
+    return Comparator.comparing(Tag::getName);
   }
 
   private static Comparator<Tag> byOrder() {
-    return new Comparator<Tag>() {
-      @Override
-      public int compare(Tag first, Tag second) {
-        return Integer.valueOf(first.getOrder()).compareTo(second.getOrder());
-      }
-    };
+    return Comparator.comparingInt(Tag::getOrder);
   }
 
   public static Function<String, Tag> toTag(final Function<String, String> descriptor) {
-    return new Function<String, Tag>() {
-      @Override
-      public Tag apply(String input) {
-        return new Tag(input, descriptor.apply(input));
-      }
-    };
+    return input -> new Tag(input, descriptor.apply(input));
   }
 
   public static Function<String, String> descriptor(
       final Map<String, Tag> tagLookup,
       final String defaultDescription) {
 
-    return new Function<String, String>() {
-      @Override
-      public String apply(String input) {
-        return Optional.fromNullable(tagLookup.get(input))
-            .transform(toTagDescription())
-            .or(defaultDescription);
-      }
-    };
-  }
-
-  private static Function<Tag, String> toTagDescription() {
-    return new Function<Tag, String>() {
-      @Override
-      public String apply(Tag input) {
-        return input.getDescription();
-      }
-    };
-  }
-
-  public static Function<Tag, String> toTagName() {
-    return new Function<Tag, String>() {
-      @Override
-      public String apply(Tag input) {
-        return input.getName();
-      }
-    };
-  }
-
-  static Function<ApiListing, Iterable<Tag>> collectTags() {
-    return new Function<ApiListing, Iterable<Tag>>() {
-      @Override
-      public Iterable<Tag> apply(ApiListing input) {
-        return input.getTags();
-      }
-    };
+    return input -> ofNullable(tagLookup.get(input))
+        .map(Tag::getDescription)
+        .orElse(defaultDescription);
   }
 
   public static Predicate<String> emptyTags() {
-    return new Predicate<String>() {
-      @Override
-      public boolean apply(String input) {
-        return !Strings.isNullOrEmpty(input);
-      }
-    };
+    return input -> !isEmpty(input);
   }
 }
