@@ -19,8 +19,6 @@
 package springfox.documentation.spring.data.rest;
 
 import com.fasterxml.classmate.TypeResolver;
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.mapping.context.PersistentEntities;
 import org.springframework.data.repository.support.Repositories;
@@ -34,9 +32,11 @@ import springfox.documentation.spi.service.RequestHandlerProvider;
 
 import javax.annotation.PostConstruct;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
+import java.util.function.Function;
 
-import static com.google.common.collect.Lists.*;
+import static java.util.stream.Collectors.*;
 
 @Component
 class EntityServicesProvider implements RequestHandlerProvider {
@@ -75,7 +75,7 @@ class EntityServicesProvider implements RequestHandlerProvider {
 
   @Override
   public List<RequestHandler> requestHandlers() {
-    List<EntityContext> contexts = newArrayList();
+    List<EntityContext> contexts = new ArrayList<>();
     for (Class each : repositories) {
       repositories.getRepositoryInformationFor(each).ifPresent(repositoryInfo -> {
         repositories.getRepositoryFor(each).ifPresent(repositoryInstance -> {
@@ -96,22 +96,18 @@ class EntityServicesProvider implements RequestHandlerProvider {
 
     }
 
-    List<RequestHandler> handlers = new ArrayList<RequestHandler>();
+    List<RequestHandler> handlers = new ArrayList<>();
     for (EntityContext each : contexts) {
-      handlers.addAll(FluentIterable.from(extractorConfiguration.getEntityExtractors())
-          .transformAndConcat(extractFromContext(each))
-          .toList());
+      handlers.addAll(extractorConfiguration.getEntityExtractors().stream()
+          .map(extractFromContext(each))
+          .flatMap(Collection::stream)
+          .collect(toList()));
     }
     return handlers;
   }
 
   private Function<EntityOperationsExtractor, List<RequestHandler>> extractFromContext(final EntityContext context) {
-    return new Function<EntityOperationsExtractor, List<RequestHandler>>() {
-      @Override
-      public List<RequestHandler> apply(EntityOperationsExtractor input) {
-        return input.extract(context);
-      }
-    };
+    return input -> input.extract(context);
   }
 
 }
